// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChatInterface > should match snapshot with empty messages 1`] = `
<div
  class="relative w-full rounded-2xl overflow-hidden shadow-md"
  data-testid="chat-interface-container"
  style="height: calc(100dvh - 270px);"
>
  <style>
    
        @media (min-width: 768px) {
          [data-testid="chat-interface-container"] {
            height: calc(100dvh - 180px) !important;
          }
        }
        
        /* Message spacing - increase padding between messages */
        [data-testid="chat-interface-container"] .cs-message {
          margin-top: 1rem !important;
          margin-bottom: 1rem !important;
        }
        
        /* Additional spacing for first/last messages */
        [data-testid="chat-interface-container"] .cs-message:first-child {
          margin-top: 1.5rem !important;
        }
        
        [data-testid="chat-interface-container"] .cs-message:last-child {
          margin-bottom: 1.5rem !important;
        }
        
        /* Extra spacing between different senders */
        [data-testid="chat-interface-container"] .cs-message--incoming + .cs-message--outgoing,
        [data-testid="chat-interface-container"] .cs-message--outgoing + .cs-message--incoming {
          margin-top: 1.5rem !important;
        }
        
        /* AI message bubble (incoming) - sharp corner at bottom-left (where avatar is) */
        [data-testid="chat-interface-container"] .cs-message--incoming .cs-message__content {
          background-color: #F2F5F7 !important;
          border: 1px solid #1A2A33 !important;
          color: #1A2A33 !important;
          border-radius: 12px 12px 12px 0px !important;
        }
        
        /* User message bubble (outgoing) */
        [data-testid="chat-interface-container"] .cs-message--outgoing .cs-message__content {
          background-color: #DFFBFD !important;
          border: 1px solid #1A2A33 !important;
          color: #1A2A33 !important;
        }
        
        /* Message input field wrapper */
        [data-testid="chat-interface-container"] .cs-message-input__content-editor-wrapper {
          background-color: #FCF7ED !important;
          border: none !important;
        }
        
        /* Message input textarea/input element */
        [data-testid="chat-interface-container"] .cs-message-input__content-editor-wrapper textarea,
        [data-testid="chat-interface-container"] .cs-message-input__content-editor-wrapper input {
          background-color: #FCF7ED !important;
          border: none !important;
          color: #1A2A33 !important;
        }
        
        /* Message input placeholder text */
        [data-testid="chat-interface-container"] .cs-message-input__content-editor-wrapper textarea::placeholder,
        [data-testid="chat-interface-container"] .cs-message-input__content-editor-wrapper input::placeholder {
          color: #8B9AA2 !important;
        }
        
        /* Alternative selectors for message input */
        [data-testid="chat-interface-container"] .cs-message-input__content-editor {
          background-color: #FCF7ED !important;
          border: none !important;
          color: #1A2A33 !important;
        }
        
        [data-testid="chat-interface-container"] .cs-message-input__content-editor::placeholder {
          color: #8B9AA2 !important;
        }
        
        /* Avatar styling - ensure circular avatars with minimum size */
        [data-testid="chat-interface-container"] .cs-avatar {
          border-radius: 50% !important;
          min-width: 26px !important;
          min-height: 26px !important;
          width: 32px !important;
          height: 32px !important;
          overflow: hidden !important;
        }
        
        /* Dark background for AI avatars */
        [data-testid="chat-interface-container"] .cs-avatar[data-ai-avatar="true"] {
          background-color: #1A2A33 !important;
          color: #ffffff !important;
        }
        
        /* Light background for user avatars (default) */
        [data-testid="chat-interface-container"] .cs-avatar:not([data-ai-avatar="true"]) {
          background-color: #E5E7EB !important;
          color: #374151 !important;
        }
        
        [data-testid="chat-interface-container"] .cs-avatar img {
          width: 100% !important;
          height: 100% !important;
          object-fit: cover !important;
          border-radius: 50% !important;
        }
        
        /* AI avatar logo - use contain to fit entirely within bubble */
        [data-testid="chat-interface-container"] .cs-avatar[data-ai-avatar="true"] img {
          object-fit: contain !important;
          padding: 6px !important;
        }
        
        /* User avatar fallback - show User icon when image fails or no src */
        [data-testid="chat-interface-container"] .cs-avatar[data-user-fallback="true"] img,
        [data-testid="chat-interface-container"] .cs-avatar[data-user-fallback="true"] .cs-avatar__content {
          display: none !important;
        }
        
        [data-testid="chat-interface-container"] .cs-avatar[data-user-fallback="true"]::before {
          content: '' !important;
          position: absolute !important;
          top: 0 !important;
          left: 0 !important;
          width: 100% !important;
          height: 100% !important;
          background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%23374151' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2'/%3E%3Ccircle cx='12' cy='7' r='4'/%3E%3C/svg%3E") !important;
          background-size: 60% !important;
          background-position: center !important;
          background-repeat: no-repeat !important;
          pointer-events: none !important;
        }
        
        /* Typing indicator styling - ensure it displays properly */
        [data-testid="chat-interface-container"] .cs-message--incoming .cs-message__custom-content {
          display: block !important;
        }
        
        [data-testid="chat-interface-container"] .cs-typing-indicator {
          background-color: #F2F5F7 !important;
          border: 1px solid #1A2A33 !important;
          border-radius: 12px 12px 12px 0px !important;
          padding: 12px 16px !important;
          display: flex !important;
          align-items: center !important;
          gap: 8px !important;
          min-width: 120px !important;
        }
        
        [data-testid="chat-interface-container"] .cs-typing-indicator__text {
          color: #1A2A33 !important;
          font-size: 14px !important;
        }
        
        [data-testid="chat-interface-container"] .cs-typing-indicator__indicator {
          display: flex !important;
          gap: 4px !important;
        }
        
        [data-testid="chat-interface-container"] .cs-typing-indicator__dot {
          width: 8px !important;
          height: 8px !important;
          background-color: #1A2A33 !important;
          border-radius: 50% !important;
          animation: typing-dot 1.4s infinite ease-in-out !important;
        }
        
        [data-testid="chat-interface-container"] .cs-typing-indicator__dot:nth-child(1) {
          animation-delay: 0s !important;
        }
        
        [data-testid="chat-interface-container"] .cs-typing-indicator__dot:nth-child(2) {
          animation-delay: 0.2s !important;
        }
        
        [data-testid="chat-interface-container"] .cs-typing-indicator__dot:nth-child(3) {
          animation-delay: 0.4s !important;
        }
        
        @keyframes typing-dot {
          0%, 60%, 100% {
            opacity: 0.3;
            transform: scale(0.8);
          }
          30% {
            opacity: 1;
            transform: scale(1);
          }
        }
      
  </style>
  <div
    class="cs-main-container"
  >
    <div
      class="cs-chat-container"
    >
      <div
        aria-live="polite"
        class="cs-message-list"
        data-testid="chat-message-list"
        role="log"
        style="-webkit-overflow-scrolling: touch;"
      >
        <div
          class="scrollbar-container cs-message-list__scroll-wrapper ps"
          data-cs-message-list=""
          style="overscroll-behavior-y: none; overflow-anchor: auto;"
        >
          <div
            class="cs-message-list__scroll-to"
          />
          <div
            class="ps__rail-x"
            style="left: 0px; top: 0px;"
          >
            <div
              class="ps__thumb-x"
              style="left: 0px; width: 0px;"
              tabindex="0"
            />
          </div>
          <div
            class="ps__rail-y"
            style="top: 0px; left: 0px;"
          >
            <div
              class="ps__thumb-y"
              style="top: 0px; height: 0px;"
              tabindex="0"
            />
          </div>
        </div>
      </div>
      <div
        aria-label="Type your message to the AI assistant"
        class="cs-message-input"
        data-testid="chat-message-input"
      >
        <div
          class="cs-message-input__content-editor-wrapper"
        >
          <div
            class="scrollbar-container cs-message-input__content-editor-container ps"
          >
            <div
              class="cs-message-input__content-editor"
              contenteditable="true"
              data-placeholder="Type your message here..."
            />
            <div
              class="ps__rail-x"
              style="left: 0px; top: 0px;"
            >
              <div
                class="ps__thumb-x"
                style="left: 0px; width: 0px;"
                tabindex="0"
              />
            </div>
            <div
              class="ps__rail-y"
              style="top: 0px; left: 0px;"
            >
              <div
                class="ps__thumb-y"
                style="top: 0px; height: 0px;"
                tabindex="0"
              />
            </div>
          </div>
        </div>
        <div
          class="cs-message-input__tools"
        >
          <button
            class="cs-button cs-button--send"
            disabled=""
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-paper-plane "
              data-icon="paper-plane"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M498.1 5.6c10.1 7 15.4 19.1 13.5 31.2l-64 416c-1.5 9.7-7.4 18.2-16 23s-18.9 5.4-28 1.6L284 427.7l-68.5 74.1c-8.9 9.7-22.9 12.9-35.2 8.1S160 493.2 160 480l0-83.6c0-4 1.5-7.8 4.2-10.8L331.8 202.8c5.8-6.3 5.6-16-.4-22s-15.7-6.4-22-.7L106 360.8 17.7 316.6C7.1 311.3 .3 300.7 0 288.9s5.9-22.8 16.1-28.7l448-256c10.7-6.1 23.9-5.5 34 1.4z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ChatInterface > should match snapshot with loading state 1`] = `
<div
  class="relative w-full rounded-2xl overflow-hidden shadow-md"
  data-testid="chat-interface-container"
  style="height: calc(100dvh - 270px);"
>
  <style>
    
        @media (min-width: 768px) {
          [data-testid="chat-interface-container"] {
            height: calc(100dvh - 180px) !important;
          }
        }
        
        /* Message spacing - increase padding between messages */
        [data-testid="chat-interface-container"] .cs-message {
          margin-top: 1rem !important;
          margin-bottom: 1rem !important;
        }
        
        /* Additional spacing for first/last messages */
        [data-testid="chat-interface-container"] .cs-message:first-child {
          margin-top: 1.5rem !important;
        }
        
        [data-testid="chat-interface-container"] .cs-message:last-child {
          margin-bottom: 1.5rem !important;
        }
        
        /* Extra spacing between different senders */
        [data-testid="chat-interface-container"] .cs-message--incoming + .cs-message--outgoing,
        [data-testid="chat-interface-container"] .cs-message--outgoing + .cs-message--incoming {
          margin-top: 1.5rem !important;
        }
        
        /* AI message bubble (incoming) - sharp corner at bottom-left (where avatar is) */
        [data-testid="chat-interface-container"] .cs-message--incoming .cs-message__content {
          background-color: #F2F5F7 !important;
          border: 1px solid #1A2A33 !important;
          color: #1A2A33 !important;
          border-radius: 12px 12px 12px 0px !important;
        }
        
        /* User message bubble (outgoing) */
        [data-testid="chat-interface-container"] .cs-message--outgoing .cs-message__content {
          background-color: #DFFBFD !important;
          border: 1px solid #1A2A33 !important;
          color: #1A2A33 !important;
        }
        
        /* Message input field wrapper */
        [data-testid="chat-interface-container"] .cs-message-input__content-editor-wrapper {
          background-color: #FCF7ED !important;
          border: none !important;
        }
        
        /* Message input textarea/input element */
        [data-testid="chat-interface-container"] .cs-message-input__content-editor-wrapper textarea,
        [data-testid="chat-interface-container"] .cs-message-input__content-editor-wrapper input {
          background-color: #FCF7ED !important;
          border: none !important;
          color: #1A2A33 !important;
        }
        
        /* Message input placeholder text */
        [data-testid="chat-interface-container"] .cs-message-input__content-editor-wrapper textarea::placeholder,
        [data-testid="chat-interface-container"] .cs-message-input__content-editor-wrapper input::placeholder {
          color: #8B9AA2 !important;
        }
        
        /* Alternative selectors for message input */
        [data-testid="chat-interface-container"] .cs-message-input__content-editor {
          background-color: #FCF7ED !important;
          border: none !important;
          color: #1A2A33 !important;
        }
        
        [data-testid="chat-interface-container"] .cs-message-input__content-editor::placeholder {
          color: #8B9AA2 !important;
        }
        
        /* Avatar styling - ensure circular avatars with minimum size */
        [data-testid="chat-interface-container"] .cs-avatar {
          border-radius: 50% !important;
          min-width: 26px !important;
          min-height: 26px !important;
          width: 32px !important;
          height: 32px !important;
          overflow: hidden !important;
        }
        
        /* Dark background for AI avatars */
        [data-testid="chat-interface-container"] .cs-avatar[data-ai-avatar="true"] {
          background-color: #1A2A33 !important;
          color: #ffffff !important;
        }
        
        /* Light background for user avatars (default) */
        [data-testid="chat-interface-container"] .cs-avatar:not([data-ai-avatar="true"]) {
          background-color: #E5E7EB !important;
          color: #374151 !important;
        }
        
        [data-testid="chat-interface-container"] .cs-avatar img {
          width: 100% !important;
          height: 100% !important;
          object-fit: cover !important;
          border-radius: 50% !important;
        }
        
        /* AI avatar logo - use contain to fit entirely within bubble */
        [data-testid="chat-interface-container"] .cs-avatar[data-ai-avatar="true"] img {
          object-fit: contain !important;
          padding: 6px !important;
        }
        
        /* User avatar fallback - show User icon when image fails or no src */
        [data-testid="chat-interface-container"] .cs-avatar[data-user-fallback="true"] img,
        [data-testid="chat-interface-container"] .cs-avatar[data-user-fallback="true"] .cs-avatar__content {
          display: none !important;
        }
        
        [data-testid="chat-interface-container"] .cs-avatar[data-user-fallback="true"]::before {
          content: '' !important;
          position: absolute !important;
          top: 0 !important;
          left: 0 !important;
          width: 100% !important;
          height: 100% !important;
          background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%23374151' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2'/%3E%3Ccircle cx='12' cy='7' r='4'/%3E%3C/svg%3E") !important;
          background-size: 60% !important;
          background-position: center !important;
          background-repeat: no-repeat !important;
          pointer-events: none !important;
        }
        
        /* Typing indicator styling - ensure it displays properly */
        [data-testid="chat-interface-container"] .cs-message--incoming .cs-message__custom-content {
          display: block !important;
        }
        
        [data-testid="chat-interface-container"] .cs-typing-indicator {
          background-color: #F2F5F7 !important;
          border: 1px solid #1A2A33 !important;
          border-radius: 12px 12px 12px 0px !important;
          padding: 12px 16px !important;
          display: flex !important;
          align-items: center !important;
          gap: 8px !important;
          min-width: 120px !important;
        }
        
        [data-testid="chat-interface-container"] .cs-typing-indicator__text {
          color: #1A2A33 !important;
          font-size: 14px !important;
        }
        
        [data-testid="chat-interface-container"] .cs-typing-indicator__indicator {
          display: flex !important;
          gap: 4px !important;
        }
        
        [data-testid="chat-interface-container"] .cs-typing-indicator__dot {
          width: 8px !important;
          height: 8px !important;
          background-color: #1A2A33 !important;
          border-radius: 50% !important;
          animation: typing-dot 1.4s infinite ease-in-out !important;
        }
        
        [data-testid="chat-interface-container"] .cs-typing-indicator__dot:nth-child(1) {
          animation-delay: 0s !important;
        }
        
        [data-testid="chat-interface-container"] .cs-typing-indicator__dot:nth-child(2) {
          animation-delay: 0.2s !important;
        }
        
        [data-testid="chat-interface-container"] .cs-typing-indicator__dot:nth-child(3) {
          animation-delay: 0.4s !important;
        }
        
        @keyframes typing-dot {
          0%, 60%, 100% {
            opacity: 0.3;
            transform: scale(0.8);
          }
          30% {
            opacity: 1;
            transform: scale(1);
          }
        }
      
  </style>
  <div
    class="cs-main-container"
  >
    <div
      class="cs-chat-container"
    >
      <div
        aria-live="polite"
        class="cs-message-list"
        data-testid="chat-message-list"
        role="log"
        style="-webkit-overflow-scrolling: touch;"
      >
        <div
          class="scrollbar-container cs-message-list__scroll-wrapper ps"
          data-cs-message-list=""
          style="overscroll-behavior-y: none; overflow-anchor: auto;"
        >
          <section
            aria-label="AI Assistant: now"
            class="cs-message cs-message--incoming cs-message--single cs-message--avatar-bl"
            data-cs-message=""
            data-testid="chat-typing-indicator"
          >
            <div
              class="cs-message__avatar"
            >
              <div
                class="cs-avatar cs-avatar--md"
                data-ai-avatar="true"
              >
                <img
                  alt="AI Assistant"
                  src="/PUE_logo_transparent.png"
                />
                 
              </div>
            </div>
            <div
              class="cs-message__content-wrapper"
            >
              <div
                class="cs-message__content"
              >
                <div
                  class="cs-message__custom-content"
                >
                  <div
                    class="cs-typing-indicator"
                  >
                    <div
                      class="cs-typing-indicator__indicator"
                    >
                      <div
                        class="cs-typing-indicator__dot"
                      />
                      <div
                        class="cs-typing-indicator__dot"
                      />
                      <div
                        class="cs-typing-indicator__dot"
                      />
                    </div>
                    <div
                      class="cs-typing-indicator__text"
                    >
                      AI is thinking...
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </section>
          <div
            class="cs-message-list__scroll-to"
          />
          <div
            class="ps__rail-x"
            style="left: 0px; top: 0px;"
          >
            <div
              class="ps__thumb-x"
              style="left: 0px; width: 0px;"
              tabindex="0"
            />
          </div>
          <div
            class="ps__rail-y"
            style="top: 0px; left: 0px;"
          >
            <div
              class="ps__thumb-y"
              style="top: 0px; height: 0px;"
              tabindex="0"
            />
          </div>
        </div>
      </div>
      <div
        aria-label="Type your message to the AI assistant"
        class="cs-message-input cs-message-input--disabled"
        data-testid="chat-message-input"
      >
        <div
          class="cs-message-input__content-editor-wrapper"
        >
          <div
            class="scrollbar-container cs-message-input__content-editor-container ps"
          >
            <div
              class="cs-message-input__content-editor"
              contenteditable="false"
              data-placeholder="Type your message here..."
              disabled=""
            />
            <div
              class="ps__rail-x"
              style="left: 0px; top: 0px;"
            >
              <div
                class="ps__thumb-x"
                style="left: 0px; width: 0px;"
                tabindex="0"
              />
            </div>
            <div
              class="ps__rail-y"
              style="top: 0px; left: 0px;"
            >
              <div
                class="ps__thumb-y"
                style="top: 0px; height: 0px;"
                tabindex="0"
              />
            </div>
          </div>
        </div>
        <div
          class="cs-message-input__tools"
        >
          <button
            class="cs-button cs-button--send"
            disabled=""
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-paper-plane "
              data-icon="paper-plane"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M498.1 5.6c10.1 7 15.4 19.1 13.5 31.2l-64 416c-1.5 9.7-7.4 18.2-16 23s-18.9 5.4-28 1.6L284 427.7l-68.5 74.1c-8.9 9.7-22.9 12.9-35.2 8.1S160 493.2 160 480l0-83.6c0-4 1.5-7.8 4.2-10.8L331.8 202.8c5.8-6.3 5.6-16-.4-22s-15.7-6.4-22-.7L106 360.8 17.7 316.6C7.1 311.3 .3 300.7 0 288.9s5.9-22.8 16.1-28.7l448-256c10.7-6.1 23.9-5.5 34 1.4z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ChatInterface > should match snapshot with messages 1`] = `
<div
  class="relative w-full rounded-2xl overflow-hidden shadow-md"
  data-testid="chat-interface-container"
  style="height: calc(100dvh - 270px);"
>
  <style>
    
        @media (min-width: 768px) {
          [data-testid="chat-interface-container"] {
            height: calc(100dvh - 180px) !important;
          }
        }
        
        /* Message spacing - increase padding between messages */
        [data-testid="chat-interface-container"] .cs-message {
          margin-top: 1rem !important;
          margin-bottom: 1rem !important;
        }
        
        /* Additional spacing for first/last messages */
        [data-testid="chat-interface-container"] .cs-message:first-child {
          margin-top: 1.5rem !important;
        }
        
        [data-testid="chat-interface-container"] .cs-message:last-child {
          margin-bottom: 1.5rem !important;
        }
        
        /* Extra spacing between different senders */
        [data-testid="chat-interface-container"] .cs-message--incoming + .cs-message--outgoing,
        [data-testid="chat-interface-container"] .cs-message--outgoing + .cs-message--incoming {
          margin-top: 1.5rem !important;
        }
        
        /* AI message bubble (incoming) - sharp corner at bottom-left (where avatar is) */
        [data-testid="chat-interface-container"] .cs-message--incoming .cs-message__content {
          background-color: #F2F5F7 !important;
          border: 1px solid #1A2A33 !important;
          color: #1A2A33 !important;
          border-radius: 12px 12px 12px 0px !important;
        }
        
        /* User message bubble (outgoing) */
        [data-testid="chat-interface-container"] .cs-message--outgoing .cs-message__content {
          background-color: #DFFBFD !important;
          border: 1px solid #1A2A33 !important;
          color: #1A2A33 !important;
        }
        
        /* Message input field wrapper */
        [data-testid="chat-interface-container"] .cs-message-input__content-editor-wrapper {
          background-color: #FCF7ED !important;
          border: none !important;
        }
        
        /* Message input textarea/input element */
        [data-testid="chat-interface-container"] .cs-message-input__content-editor-wrapper textarea,
        [data-testid="chat-interface-container"] .cs-message-input__content-editor-wrapper input {
          background-color: #FCF7ED !important;
          border: none !important;
          color: #1A2A33 !important;
        }
        
        /* Message input placeholder text */
        [data-testid="chat-interface-container"] .cs-message-input__content-editor-wrapper textarea::placeholder,
        [data-testid="chat-interface-container"] .cs-message-input__content-editor-wrapper input::placeholder {
          color: #8B9AA2 !important;
        }
        
        /* Alternative selectors for message input */
        [data-testid="chat-interface-container"] .cs-message-input__content-editor {
          background-color: #FCF7ED !important;
          border: none !important;
          color: #1A2A33 !important;
        }
        
        [data-testid="chat-interface-container"] .cs-message-input__content-editor::placeholder {
          color: #8B9AA2 !important;
        }
        
        /* Avatar styling - ensure circular avatars with minimum size */
        [data-testid="chat-interface-container"] .cs-avatar {
          border-radius: 50% !important;
          min-width: 26px !important;
          min-height: 26px !important;
          width: 32px !important;
          height: 32px !important;
          overflow: hidden !important;
        }
        
        /* Dark background for AI avatars */
        [data-testid="chat-interface-container"] .cs-avatar[data-ai-avatar="true"] {
          background-color: #1A2A33 !important;
          color: #ffffff !important;
        }
        
        /* Light background for user avatars (default) */
        [data-testid="chat-interface-container"] .cs-avatar:not([data-ai-avatar="true"]) {
          background-color: #E5E7EB !important;
          color: #374151 !important;
        }
        
        [data-testid="chat-interface-container"] .cs-avatar img {
          width: 100% !important;
          height: 100% !important;
          object-fit: cover !important;
          border-radius: 50% !important;
        }
        
        /* AI avatar logo - use contain to fit entirely within bubble */
        [data-testid="chat-interface-container"] .cs-avatar[data-ai-avatar="true"] img {
          object-fit: contain !important;
          padding: 6px !important;
        }
        
        /* User avatar fallback - show User icon when image fails or no src */
        [data-testid="chat-interface-container"] .cs-avatar[data-user-fallback="true"] img,
        [data-testid="chat-interface-container"] .cs-avatar[data-user-fallback="true"] .cs-avatar__content {
          display: none !important;
        }
        
        [data-testid="chat-interface-container"] .cs-avatar[data-user-fallback="true"]::before {
          content: '' !important;
          position: absolute !important;
          top: 0 !important;
          left: 0 !important;
          width: 100% !important;
          height: 100% !important;
          background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%23374151' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2'/%3E%3Ccircle cx='12' cy='7' r='4'/%3E%3C/svg%3E") !important;
          background-size: 60% !important;
          background-position: center !important;
          background-repeat: no-repeat !important;
          pointer-events: none !important;
        }
        
        /* Typing indicator styling - ensure it displays properly */
        [data-testid="chat-interface-container"] .cs-message--incoming .cs-message__custom-content {
          display: block !important;
        }
        
        [data-testid="chat-interface-container"] .cs-typing-indicator {
          background-color: #F2F5F7 !important;
          border: 1px solid #1A2A33 !important;
          border-radius: 12px 12px 12px 0px !important;
          padding: 12px 16px !important;
          display: flex !important;
          align-items: center !important;
          gap: 8px !important;
          min-width: 120px !important;
        }
        
        [data-testid="chat-interface-container"] .cs-typing-indicator__text {
          color: #1A2A33 !important;
          font-size: 14px !important;
        }
        
        [data-testid="chat-interface-container"] .cs-typing-indicator__indicator {
          display: flex !important;
          gap: 4px !important;
        }
        
        [data-testid="chat-interface-container"] .cs-typing-indicator__dot {
          width: 8px !important;
          height: 8px !important;
          background-color: #1A2A33 !important;
          border-radius: 50% !important;
          animation: typing-dot 1.4s infinite ease-in-out !important;
        }
        
        [data-testid="chat-interface-container"] .cs-typing-indicator__dot:nth-child(1) {
          animation-delay: 0s !important;
        }
        
        [data-testid="chat-interface-container"] .cs-typing-indicator__dot:nth-child(2) {
          animation-delay: 0.2s !important;
        }
        
        [data-testid="chat-interface-container"] .cs-typing-indicator__dot:nth-child(3) {
          animation-delay: 0.4s !important;
        }
        
        @keyframes typing-dot {
          0%, 60%, 100% {
            opacity: 0.3;
            transform: scale(0.8);
          }
          30% {
            opacity: 1;
            transform: scale(1);
          }
        }
      
  </style>
  <div
    class="cs-main-container"
  >
    <div
      class="cs-chat-container"
    >
      <div
        aria-live="polite"
        class="cs-message-list"
        data-testid="chat-message-list"
        role="log"
        style="-webkit-overflow-scrolling: touch;"
      >
        <div
          class="scrollbar-container cs-message-list__scroll-wrapper ps"
          data-cs-message-list=""
          style="overscroll-behavior-y: none; overflow-anchor: auto;"
        >
          <section
            aria-label="You: Just now"
            class="cs-message cs-message--outgoing cs-message--single cs-message--avatar-br"
            data-cs-message=""
          >
            <div
              class="cs-message__avatar"
            >
              <div
                class="cs-avatar cs-avatar--md"
              >
                <img
                  alt="John Doe"
                  src="https://example.com/avatar.jpg"
                />
                 
              </div>
            </div>
            <div
              class="cs-message__content-wrapper"
            >
              <div
                class="cs-message__content"
              >
                <div
                  class="cs-message__html-content"
                >
                  Hello
                </div>
              </div>
            </div>
          </section>
          <section
            aria-label="AI Assistant: Just now"
            class="cs-message cs-message--incoming cs-message--single cs-message--avatar-bl"
            data-cs-message=""
          >
            <div
              class="cs-message__avatar"
            >
              <div
                class="cs-avatar cs-avatar--md"
                data-ai-avatar="true"
              >
                <img
                  alt="AI Assistant"
                  src="/PUE_logo_transparent.png"
                />
                 
              </div>
            </div>
            <div
              class="cs-message__content-wrapper"
            >
              <div
                class="cs-message__content"
              >
                <div
                  class="cs-message__html-content"
                >
                  Hi there!
                </div>
              </div>
            </div>
          </section>
          <div
            class="cs-message-list__scroll-to"
          />
          <div
            class="ps__rail-x"
            style="left: 0px; top: 0px;"
          >
            <div
              class="ps__thumb-x"
              style="left: 0px; width: 0px;"
              tabindex="0"
            />
          </div>
          <div
            class="ps__rail-y"
            style="top: 0px; left: 0px;"
          >
            <div
              class="ps__thumb-y"
              style="top: 0px; height: 0px;"
              tabindex="0"
            />
          </div>
        </div>
      </div>
      <div
        aria-label="Type your message to the AI assistant"
        class="cs-message-input"
        data-testid="chat-message-input"
      >
        <div
          class="cs-message-input__content-editor-wrapper"
        >
          <div
            class="scrollbar-container cs-message-input__content-editor-container ps"
          >
            <div
              class="cs-message-input__content-editor"
              contenteditable="true"
              data-placeholder="Type your message here..."
            />
            <div
              class="ps__rail-x"
              style="left: 0px; top: 0px;"
            >
              <div
                class="ps__thumb-x"
                style="left: 0px; width: 0px;"
                tabindex="0"
              />
            </div>
            <div
              class="ps__rail-y"
              style="top: 0px; left: 0px;"
            >
              <div
                class="ps__thumb-y"
                style="top: 0px; height: 0px;"
                tabindex="0"
              />
            </div>
          </div>
        </div>
        <div
          class="cs-message-input__tools"
        >
          <button
            class="cs-button cs-button--send"
            disabled=""
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-paper-plane "
              data-icon="paper-plane"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M498.1 5.6c10.1 7 15.4 19.1 13.5 31.2l-64 416c-1.5 9.7-7.4 18.2-16 23s-18.9 5.4-28 1.6L284 427.7l-68.5 74.1c-8.9 9.7-22.9 12.9-35.2 8.1S160 493.2 160 480l0-83.6c0-4 1.5-7.8 4.2-10.8L331.8 202.8c5.8-6.3 5.6-16-.4-22s-15.7-6.4-22-.7L106 360.8 17.7 316.6C7.1 311.3 .3 300.7 0 288.9s5.9-22.8 16.1-28.7l448-256c10.7-6.1 23.9-5.5 34 1.4z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
